Improve publishers/properties, some refactor.